fortran: ICE using SHAPE with FINDLOC PR93835

Backported from mainline
	2020-02-24  Mark Eggleston  <markeggleston@gcc.gnu.org>

	PR fortran/93835
	* simplify.c (simplify_findloc_nodim) : Fix whitespace issues.
	(gfc_simplify_shape) : Create and initialise one shape value
	for the result expression. Set shape value with the rank of
	the source array.

	PR fortran/93835
	* gfortran.dg/pr77351.f90 : Check for one error instead of two.
	* gfortran.dg/pr93835.f08 : New test.